syntax = "proto3";

package sm64js;
message RootMsg {
	oneof message {
		Sm64JsMsg uncompressed_sm64js_msg = 1;
		bytes compressed_sm64js_msg = 2;
	}
}

message Sm64JsMsg {
	oneof message {
		MarioListMsg list_msg = 1;
		ConnectedMsg connected_msg = 2;
		PingMsg ping_msg = 3;
		MarioMsg mario_msg = 4;
		PlayerListsMsg player_lists_msg = 5;
		AttackMsg attack_msg = 6;
		GrabFlagMsg grab_msg = 7;
		ChatMsg chat_msg = 8;
		InitMsg init_msg = 9;
		SkinMsg skin_msg = 10;
		PlayerNameMsg player_name_msg = 11;
		AnnouncementMsg announcement_msg = 12;
		/*ControllerMsg controller_msg = 6;
		ControllerListMsg controller_list_msg = 7;*/
	}
}

message MarioListMsg {
	repeated FlagMsg flag = 1;
	repeated MarioMsg mario = 2;
}

message ConnectedMsg {
	uint32 socketID = 1;
}

message PingMsg {
	float time = 1;
}

message ControllerListMsg {
	repeated ControllerMsg controller = 1;
}

message FlagMsg {
	repeated float pos = 1;
	bool linkedToPlayer = 2;
	uint32 socketID = 3;
	float height_before_fall = 4;
}

message GrabFlagMsg {
	repeated float pos = 1;
	uint32 flag_id = 2;
}

message AttackMsg {
	uint32 target_socket_id = 1;
	uint32 attacker_socket_id = 2;
	uint32 flag_id = 3;
}

message MarioMsg {
	ControllerMsg controller = 1;
	uint32 action = 3;
	uint32 prevAction = 4;
	uint32 actionState = 5;
	uint32 actionTimer = 6;
	uint32 actionArg = 7;
	sint32 invincTimer = 8;
	uint32 framesSinceA = 9;
	uint32 framesSinceB = 10;
	uint32 wallKickTimer = 11;
	uint32 doubleJumpTimer = 12;
	repeated sint32 faceAngle = 13;
	repeated sint32 angleVel = 14;
	repeated float pos = 15;
	repeated float vel = 16;
	float forwardVel = 17;
	repeated sint32 rawData = 18;
	uint32 usedObjID = 19;
	uint32 socketID = 20;
	bool parachuting = 21;
}

message ControllerMsg {
	float stickX = 1;
	float stickY = 2;
	float stickMag = 3;
	uint32 buttonDown = 4;
	uint32 buttonPressed = 5;
	sint32 cameraYaw = 6;
	uint32 socketID = 7;
}

message PlayerListsMsg {
	repeated ValidPlayersMsg room = 1;
}

message ValidPlayersMsg {
	uint32 room_key = 1;
	repeated uint32 validPlayers = 2;
}

message ChatMsg {
	string message = 1;
	string sender = 2;
	uint32 socketID = 3;
	string adminToken = 4;
	bool isAdmin = 5;
}

message InitMsg {
}

message SkinMsg {
	uint32 socketID = 1;
	SkinData skinData = 2;
	string playerName = 3;
}

message SkinData {
	SkinValue overalls = 1;
	SkinValue hat = 2;
	SkinValue shirt = 3;
	SkinValue gloves = 4;
	SkinValue boots = 5;
	SkinValue skin = 6;
	SkinValue hair = 7;
	uint32 customCapState = 8;
}

message SkinValue {
	enum SpecialSkinValues {
		RAINBOW = 0;
	}
	oneof value {
		uint64 bytes = 1;
		SpecialSkinValues special = 2;
	}
}

message PlayerNameMsg {
	string name = 1;
	uint32 level = 2;
	bool accepted = 3;
}

message AnnouncementMsg {
	string message = 1;
	uint32 timer = 2;
}